cabal-version:      3.0
name:               steam-login
version:            0.1.0.0
license:            MIT
maintainer:         jacek@galowicz.de
author:             Jacek Galowicz
category:           Web
extra-source-files:
  LICENSE

executable steam-login
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , directory
    , http-client
    , http-client-tls
    , http-types
    , mtl
    , optparse-applicative
    , profunctors
    , servant
    , servant-auth-server
    , servant-server
    , text
    , time
    , unordered-containers
    , uri-encode
    , vector
    , wai
    , warp
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
  hs-source-dirs:     src
  other-modules:
    , Servant.QueryParamList
    , Steam.Login
  main-is: Main.hs
